--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+spring.datasource.url=jdbc:postgresql://3.125.50.55:7878/shows_com
 
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Nov2017890#
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #JPA properties
