--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 amazon.aws.accesskey=AKIA6PS436XZW5V5FE5P
 amazon.aws.secretkey=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
-bucket.url=files.handson.academy
+bucket.url=shows.com
 
 sms4free.key=9m4HI5cW7
 sms4free.user=0549235470
